# simple_rag

./: .gitignore  Dockerfile  Dockerfile_es  README.md  client.py  docker-compose.yml  pyproject.toml
lambda_handlers/: package_lambda.sh
lambda_handlers/index_doc/: index_docs.py  init-localstack.sh  pyproject.toml
sample_files/: sample.docx  sample.json  sample.pptx  sample.py  sample.txt
src/: celery_app.py  celery_containers.py  celery_schedule.py  containers.py  server.py  upload.py
src/base/: api_exception.py  dto.py  openapi.py  singleton.py
src/clients/elasticsearch/: dto.py  es.py  schema.py
src/clients/s3/: dto.py  exceptions.py  s3.py
src/config/: config.py
src/db/: db.py
src/docs/: exceptions.py  router.py
src/docs/dtos/: docs_dto.py
src/docs/models/: doc_model.py
src/docs/repositories/: doc_repository.py
src/docs/services/: doc_reader.py  doc_uploader.py  doc_writer.py
src/docs/tasks/: index_docs.py  types.py
src/docs/tasks/clients/: es_task.py
src/docs/tasks/readers/: ppt.py
src/docs/tasks/repositories/: doc_task_repository.py
src/docs/tasks/services/: doc_writer.py
tests/: conftest.py  fakes.py
tests/tasks/services/: test_doc_writer.py
