[project]
name = "simplie-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "pinkiepie",email = "pinkipies0912@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "llama-index (>=0.12.43,<0.13.0)",
    "elasticsearch (>=9.0.2,<10.0.0)",
    "llama-index-readers-elasticsearch (>=0.3.1,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

