[project]
name = "simplie-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "pinkiepie",email = "pinkipies0912@gmail.com"}
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "boto3 (>=1.38.41,<2.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "msgpack (>=1.1.1,<2.0.0)",
    "elasticsearch[async] (>=9.0.2,<10.0.0)",
    "llama-index-core (>=0.12.43,<0.13.0)",
    "llama-index-readers-file (>=0.4.9,<0.5.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
boto3-stubs = {extras = ["s3"], version = "^1.38.41"}
watchdog = "^6.0.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"


[tool.black]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v -rA --strict-markers --cov=src --cov-report=term-missing"
